--- a/todo
+++ b/todo
@@ -4,12 +4,14 @@
 - Can't select or amend animations
 - undo and redo buggy asf
   - [x] generally doesnt work
-  - [ ] doesnt work for animations since it saves static state
+  - [x] doesnt work for animations since it saves static state
+    - [ ] color doesnt save
+- delete doesnt not work with multiple selected
 
 ## Features to add
 
 ### General
-- side panel to show animation history and edit prompts
+- side panel to show animation history and edit prompts and maye even names of animated objects
 - layering for animations and drawings
   - interactions between animations (might mean having to redo all animations when there is a new one)
 - pause and play animation
