--- a/todo
+++ b/todo
@@ -2,11 +2,11 @@
 
 ## Bugs
 - Can't select or amend animations
-- undo and redo buggy asf
+- [x] undo and redo buggy asf
   - [x] generally doesnt work
   - [x] doesnt work for animations since it saves static state
     - [x] color doesnt save
-- delete doesnt not work with multiple selected
+- [x] delete doesnt not work with multiple selected
 
 ## Features to add
 
