--- a/todo
+++ b/todo
@@ -2,6 +2,8 @@
 
 ## Bugs
 - Can't select or amend animations
+  - [x] cant move animations
+  - [ ] cant change color or size easily
 - [x] undo and redo buggy asf
   - [x] generally doesnt work
   - [x] doesnt work for animations since it saves static state
@@ -18,4 +20,6 @@
 
 ### LLM
 - LLM Auto animate
+- Need to tell it to be mindful about animated items when being moved, color changed, deleted, and such
+  - maybe pass in apples and birds as examples
   
