--- a/todo
+++ b/todo
@@ -13,10 +13,15 @@
 ## Features to add
 
 ### General
-- side panel to show animation history and edit prompts and maye even names of animated objects
+- [x] side panel to show animation history
+- [x] select objects upon clikcing entry
+- [ ] edit prompts 
+- [ ] edit names of animated objects
+- [ ] fix bug where re animating an animated object doesnt remove previous entry 
 - layering for animations and drawings
   - interactions between animations (might mean having to redo all animations when there is a new one)
-- pause and play animation
+- [x]pause and play animation
+  - [ ] fix bug with moving apples on pause
 
 ### LLM
 - LLM Auto animate
