--- a/todo
+++ b/todo
@@ -23,8 +23,8 @@
 - [ ] filter animatiosn by recent vs date vs order on canvas
 - [ ] all animations may need to wipe the object and redraw but only keep the stroke data
 
-- layering for animations and drawings
-  - interactions between animations (might mean having to redo all animations when there is a new one)
+- [x] layering for animations
+  - a bit buggy when changing layer order (might be due to fix animation) but works for demo.
   
 - [x]pause and play animation
   - [ ] fix bug with moving apples on pause (align pause / resume with selection cleared)
@@ -43,3 +43,8 @@
   - objectGroup vs animationGroup vs interactionGroup
 
 - need to do interactions, interaction panel. more animations, buffed UI, ipad?, ordering on screen 
+  - interaction paenel (animtaiton order done)
+  - added fixObject animation
+  - added z-index ordering
+
+- still need inteactions, interactions view, more animations, buffed UI, ipad testing, whisper, and LLM
