initial interactions UI

--- a/todo
+++ b/todo
@@ -48,3 +48,5 @@
   - added z-index ordering
 
 - still need inteactions, interactions view, more animations, buffed UI, ipad testing, whisper, and LLM
+
+avoid, follow, orbit, 
