--- a/todo
+++ b/todo
@@ -50,3 +50,9 @@
 - still need inteactions, interactions view, more animations, buffed UI, ipad testing, whisper, and LLM
 
 avoid, follow, orbit, 
+
+avoid works
+orbit
+join
+
+hop
